Migrate tests to JUnit5 (#25)